Fix for sketchy theme markets page -Before this fix, using the sketchy theme with the dark background table color would cause the Market > Buy/Sell order table data to have a black background which was pretty much unreadable

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1138,6 +1138,13 @@ tr {
   }
 }
 
+/* Fix for sketchy v5.13 theme turning all table data black */
+@if $theme-name == "sketchy" {
+  .table-dark td {
+    background-color: transparent;
+  }
+}
+
 .margin-left-5 {
   margin-left: 5px;
 }
